--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         </nav>
         <a class="btn btn-outline-primary" href="#">Ulogujte se</a>
     </div> -->
+
+
+
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light clr">
         <a class="navbar-brand" href="#">Alfa Bion</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +39,7 @@
                     <a class="nav-link" href="index.html">Početna<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Usluge</a>
+                    <a class="nav-link" href="usluge.html">Usluge</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="proizvodi.html">Uređaji</a>
@@ -46,10 +50,17 @@
             </ul>
         </div>
     </nav>
+<!--Navbar-->
+
+
+
     <!-- <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Dobrodošli</h1>
         <p class="lead">Na pravi put do održanja zdravlja</p>
     </div> -->
+
+
+<!--Carousel-->
     <div class="containerindex">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -73,6 +84,12 @@
             </a>
         </div>
     </div>
+<!--Carousel-->
+
+
+<p><a href="test.html">asdf</a></p>
+
+<!--footer-->
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="footer1">
             <p>PRATITE NAS NA DRUŠTVENIM MREŽAMA</p>
@@ -93,7 +110,10 @@
             </a>
         </div>
     </footer>
-    </div>
+  	<!--Footer-->
+
+    
+    <!--Scripts and bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
