--- a/proizvodi.html
+++ b/proizvodi.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alfa Bion</title>
+    <!--Font-->
+
+    <!--Style-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/biom.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -21,6 +24,10 @@
         </nav>
         <a class="btn btn-outline-primary" href="#">Ulogujte se</a>
     </div> -->
+
+
+
+    <!-- Navbar (TO BE REMOVED AFTER node.js SUPPORT)-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light clr">
         <a class="navbar-brand" href="#">Alfa Bion</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +39,7 @@
                     <a class="nav-link" href="index.html">Početna<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Usluge</a>
+                    <a class="nav-link" href="usluge.html">Usluge</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="proizvodi.html">Uređaji</a>
@@ -43,21 +50,34 @@
             </ul>
         </div>
     </nav>
+    <!--Navbar-->
+
+
+
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Uređaji</h1>
         <p class="lead">Detaljnije o našem asortimanu</p>
     </div>
+
+
     <div class="container">
+
+
+
         <div class="card" style="width:400px">
             <img class="card-img-top" src="img/product.jpg" alt="Card image">
+
             <div class="card-body">
                 <h4 class="card-title">Uredjaj 1</h4>
                 <p class="card-text">Cena: 1000€</p>
+
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                     Detaljnije
                 </button>
-                <!-- Modal -->
+                <!-- Button trigger modal -->
+
+                <!-- Modal Ovo treba da se doda u svaku instancu card klase -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -77,8 +97,16 @@
                         </div>
                     </div>
                 </div>
+                <!-- Modal -->
+
+
             </div>
         </div>
+         
+
+
+
+        <!--Cards-->
         <div class="card" style="width:400px">
             <img class="card-img-top" src="img/product.jpg" alt="Card image">
             <div class="card-body">
@@ -118,7 +146,14 @@
                 <p class="card-text">Cena: 1000€</p>
                 <a href="#" class="btn btn-primary">Detaljnije</a>
             </div>
-        </div>
+        </div>  
+        <!--Cards-->
+
+    </div>
+<!--End of container -->
+
+
+    <!--footer-->
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="footer1">
                 <p>PRATITE NAS NA DRUSTVENIM MREZAMA</p>
@@ -139,7 +174,8 @@
                 </a>
             </div>
         </footer>
-    </div>
+    <!--footer-->
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
